# CPP-Library

./: .gitignore  LICENSE  README.md
data/mat_unit_tests/: generation_definition.xml  test_definition.xml
scripts/: generate_mat_tests.py
src/: CMakeLists.txt  Lib.sln  Lib.sln.bak
src/lib_tests/: general_tests.hpp  lib_tests.vcxproj  lib_tests.vcxproj.bak  lib_tests.vcxproj.filters  linalg_tests.cpp  matrix_core_tests.cpp  ndarray_core_tests.cpp  ndarray_math_tests.cpp
src/lib_tests_console/: CMakeLists.txt  lib_tests_console.vcxproj  main.cpp
src/matrix/: array.hpp  base_array.hpp  linalg.hpp  main.cpp  matrix.hpp  matrix.vcxproj  matrix.vcxproj.filters  ndarray.hpp
src/matrix_tests/: arithmetic_tests.cpp  bitwise_tests.cpp  core_tests.cpp  general_tests.hpp  generated_tests_io.hpp  linalg_tests.cpp  logical_tests.cpp  matrix_tests.vcxproj  matrix_tests.vcxproj.bak  ndarray_core_tests.cpp  ndarray_math_tests.cpp
src/ndarray/: CMakeLists.txt  a.out  array.hpp  base_array.hpp  linalg.cpp  linalg.h  linalg.hpp  main.cpp  matrix.hpp  ndarray.cpp  ndarray.hpp  ndarray.vcxproj  ndarray.vcxproj.bak  ndarray.vcxproj.filters  random.cpp  random.hpp  range.cpp  range.hpp
src/ndarray_tests/: CMakeLists.txt  arithmetic_ops_tests.cpp  arithmetic_tests.cpp  bitwise_tests.cpp  core_tests.cpp  general_tests.hpp  generated_tests_io.hpp  linalg_tests.cpp  logical_ops_tests.cpp  logical_tests.cpp  matrix_core_tests.cpp  ndarray_math_tests.cpp  ndarray_tests.vcxproj  ndarray_tests.vcxproj.filters
